<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Main navigation actions -->
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search_food" />

        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_my_journal" />

        <item
            android:id="@+id/nav_create_meal"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_create_meal" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_filled"
            android:title="@string/menu_favorites" />

    </group>

    <!-- Settings — separate group so a divider line appears automatically -->
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

    </group>

</menu>